# FAITH

./: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  sie.cabal  stack.yaml
notes/: formalization-discoveries.md  law-dummy-bind-intro.md  laws.sie  letrec.txt  ottNotes.txt  typeCheckerNotes.txt
notes/exampleProofs/: detailedProofScript.sie  proofScript.sie
proofFiles/demo/: anyGadgets.hs  repeat.hs  smallProof.hs
proofFiles/laws/: caseStudies.hs  dbgLaws.hs  laws.sie  miniLaws.sie  moreLaws.sie  supported.sie
proofFiles/proofs/: SimplerProofScript.sie  alphaEqProof.sie  detailedProofScript.sie  miniProof.sie  prettyPrintOpt.sie  proofScript.sie  proofScript2.sie  unfoldCorrect.sie  unfoldIncorrect.sie
proofFiles/proofs/alphaEq/: dummy.sie  largeLessParens.sie  mediumTerm.sie  moreSteps.sie  shiftReduce  small.sie  smallLambda.sie
proofFiles/proofs/ctx/: detailedProofScript.sie  unfoldCorrect.sie  unfoldIncorrect.sie
proofFiles/proofs/demo/: big.sie  moreSteps.sie
proofFiles/proofs/demo/next/: nextLaws.sie  unfoldCorrect.sie
proofFiles/proofs/demo/vision/: SimplerProofScript.sie  detailedProofScript.sie
proofFiles/proofs/scetches/: repeat.hs
proofFiles/proofs/substitution/: any.sie  any2.hs  any3.hs  copy.sie  letLetInCorr.sie  orderDebug.hs  repeat.hs  small.hs  unfold-5.sie  unfold.sie
proofFiles/proofs/substitution/dbg/: any3balloon.hs  application.hs  reduction-rl.hs  testCtx.hs  testLaw.hs
proofFiles/proofs/substitution/spaceLimit/: any.sie  any3.hs  moreLaws.sie  (+1 more)
src/: GenLatex.cf  GenLatex.hs  GenLatexLaws.cf  Main.hs  MiniTypeChecker.hs  MiniTypedAST.hs  Sie.cf  SieLaws.cf  ToLocallyNameless.hs  TypeChecker.hs  TypedLawAST.hs  miniProof.sie
src/matching/: Matcher.hs
src/prettyPrinting/: LNL.cf  ShowLaw.hs  ShowTypedTerm.hs  ToPrettyLNL.hs
src/proofChecking/: LanguageLogic.hs  LocallyNameless.hs  ProofChecker.hs  Substitution.hs  SubstitutionMonad.hs  ToLocallyNameless.hs
src/typeChecking/: LawTypeChecker.hs  MiniTypeChecker.hs  MiniTypedAST.hs  TermCorrectness.hs  TypedLawAST.hs
src/types/: Common.hs  LocallyNameless.hs  MiniTypedAST.hs  TypedAST.hs  TypedLawAST.hs
src/util/: CheckMonad.hs  OtherUtils.hs  TermCorrectness.hs  TermUtils.hs
